app/css/app.css
/* ... */
body.login header {
    height: auto;
    border: none;
    background: transparent;
}

details > summary {
    margin: 10px 0;
    font-size: 18px;
    cursor: pointer;
}

.smaller {
    font-size: 18px;
}

.star-enter {
    -webkit-transition: 1s linear all;
    opacity: 0;
}

.star-enter.star-active {
    opacity: 1;
}

.files-drop-down {
    position: relative;
}

.files-drop-down div {
    position: absolute;
    right: -2px;
    top: 17px;
    width: 200px;
    background: #555;
    text-align: left;
    padding: 0 10px;
    margin: 9px 0px 0px 0px;
    text-transform: lowercase;
    font-size: 12px;
    z-index:4;
}

.notification div {
    position: absolute;
    top: 35px;
    right: 0;
    z-index: 4;
    font-size: 9pt;
    line-height: 20px;
    padding: 5px;
    text-shadow: none;
    border-radius: 5px;
}

.notification ul li > p {
    margin: 0;
    padding: 0;
}

.notification div:after, .notification div:before {
    bottom: 100%;
    border: solid transparent;
    content: " ";
    height: 0;
    width: 0;
    position: absolute;
    pointer-events: none;
}

.notification div:after {
    border-width: 10px;
    right: 4%;
    margin-left: -10px;
}

.notification div:before {
    border-width: 11px;
    right: 4%;
    margin-left: -11px;
}

.date_meta .notification div:before,
.date_meta .notification div:after {
    left: 8%;
}

.notification ul {
    width: 300px;
    list-style: none;
    padding: 5px;
    margin: 0px;
    overflow: auto;
    max-height: 300px;
}

.notification ul img {
    float: left;
    margin: 0px 0px 0px -44px;
    position: absolute;
}

.notification ul li {
    width: 250px;
    float: right;
    margin: 0px 0px 5px 0px;
    padding: 3px 5px;
    border-radius: 3px;
    position: relative;
}

.notification ul li cite {
    font-size: 12px;
}

.is-fork {
    display: inline-block;
}

.notification-forks div {
    position: absolute;
    top: 50px;
    left: -92px;
    white-space: nowrap;
    z-index: 9;
    font-size: 9pt;
    line-height: 20px;
    padding: 5px;
    text-shadow: none;
    border-radius: 5px;
    width: 210px;
}

.notification-forks div:before {
    border-width: 11px;
    left: 50%;
    margin-left: -11px;
}

.notification-forks div:after {
    border-width: 10px;
    left: 50%;
    margin-left: -10px;
}

.notification-forks div img {
    float: left;
    padding: 5px 10px 0 0;
}

.notification-forks div p {
    padding: 0 10px;
    line-height: 27px;
    font-size: 14px;
    text-shadow: 1px 1px 1px #fff;
}

.notification-forks img {
    width: 50px;
}

.notification-forks div b {
    font-size: 20px;
    line-height: 0;
}

.notification-forks cite {
    white-space: initial;
    text-transform: capitalize;
}

.date_meta .notification div {
    position: absolute;
    top: 96px;
    left: 10px;
    z-index: 9;
    font-size: 9pt;
    line-height: 20px;
    padding: 5px;
    text-shadow: none;
    border-radius: 5px;
    min-height: 106px;
    width: 210px;
}

.date_meta .notification ul {
    width: 200px;
}

.date_meta .notification li:first-child {
    display: none;
}

.date_meta .notification li {
    width: 180px;
    float: left;
    margin: 0px 0px 5px 0px;
    padding: 0 10px;
    border-radius: 3px;
    position: relative;
}

.date_meta .notification div:after {
    border-width: 10px;
    margin-left: 45px;
}

.date_meta .notification div:before {
    border-width: 11px;
    margin-left: 45px;
}

.date_meta .notification a,
.date_meta .notification a:hover {
    background: rgba(0, 0, 0, 0) !important;
    border: none;
    display: inherit;
    font-size: 12px;
}

.date_meta .notification .icon-plus-sign-alt {
    color: darkgreen;
}

.date_meta .notification .icon-minus-sign-alt {
    color: darkred;
}

.share-drop-down {
    position: relative;
    margin: 0px 3px 0px 0px;
}

.share-drop-down div {
    position: absolute;
    right: -2px;
    top: 17px;
    width: 185px;
    text-align: left;
    padding: 10px;
    margin: 9px 0px 0px 0px;
    text-transform: lowercase;
    background: #555;
    font-size: 12px;
}

.share-drop-down div input[type="text"] {
    border: none;
    padding: 3px;
}

.share-drop-down div input[type="submit"] {
    border: none;
    border-radius: 3px;
    padding: 3px 5px;
    text-transform: uppercase;
    float: right;
}

.remove-notification {
    color: #C00;
    position: absolute !important;
    top: 0px;
    right: 0px;
    z-index: 99999;
    font-size: 13px;
}

.remove-notification:hover {
    color: #fff;
}

.the-gist pre {
    margin: 0;
    padding: 0;
    width: 100%;
    zoom: document;
}

details input[type="text"] {
    margin: 0;
    padding: 5px;
    width: 60px;
    border-radius: 5px;
    display: -webkit-inline-box;
}

details {
    background: transparent;
    padding: 10px;
    margin: 10px 0;
    border-radius: 3px;
    border: 1px solid #ccc;
}

.online {
    color: #468847;
}

.offline {
    color: #903E30;
}

.date_meta div.revision-drop-down {
    position: absolute;
    left: 70px;
    top: 79px;
    height: auto;
    max-height: 60%;
    background: #555;
    text-align: left;
    overflow: auto;
    padding: 0 10px;
    margin: 9px 0px 0px 0px;
    text-transform: lowercase;
    font-size: 12px;
    width: 170px;
}

div.revision-drop-down a p b {
    font-size: 14px;
    font-weight: 700;
}

div.revision-drop-down a p {
    border-bottom: 1px solid #fff;
    margin-top: 0;
    margin-bottom: 0;
    padding-top: 0;
    padding-bottom: 0;
    margin-left: 10px;
    color: #ccc;
}

div.revision-drop-down a:hover {
    background: transparent !important;
    border: none !important;
}

div.revision-drop-down a:last-child p {
    border: none;
}

div.revision-drop-down a p:hover {
    color: #fff;
}

.favicon {
    position: relative;
    top: 4px;
    left: 0;
    border: none;
    padding: 10px;
}
/* ... */

